Fix navbar on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,6 +14,14 @@ body {
   overflow-x: hidden;
 }
 
+.desktop {
+  display: block;
+}
+
+.mobile {
+  display: none;
+}
+
 .dual-column-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -63,6 +71,70 @@ body {
   text-rendering: geometricPrecision;
 }
 
+#carHeader {
+  grid-column: 2;
+  grid-row: 1;
+  color: #f9f9f9;
+  font-size: 40px;
+  padding-left: 15px;
+}
+
+#teamHeader {
+  grid-column: 2;
+  grid-row: 2;
+  color: #f9f9f9;
+  font-style: 30px;
+  padding-left: 15px;
+}
+@media screen and (max-width: 700px) {
+  // Hide any desktop only elements
+  .desktop {
+    display: none;
+  }
+  // Show Mobile only elements
+  .mobile {
+    display: block;
+  }
+
+  .navbar {
+    // position: fixed;
+    // display: grid;
+    grid-template-columns: 55px 1fr 35px;
+    grid-template-rows: 40px 30px;
+    top: 0;
+    left: 0;
+    background: #232020;
+    // height: 73px;
+    width: 100vw;
+    overflow: hidden;
+  }
+
+  .logo {
+    padding-right: 5px;
+    font-family: 'Oswald', sans-serif;
+    // vertical-align: bottom;
+    // font-size: 40px;
+  }
+
+  #carHeader {
+    grid-column: 2;
+    grid-row: 1;
+    color: #f9f9f9;
+    font-size: 6vw;
+    vertical-align: middle;
+    height: 40px;
+    padding-left: 15px;
+  }
+
+  #teamHeader {
+    grid-column: 2;
+    grid-row: 2;
+    color: #f9f9f9;
+    font-style: 30px;
+    padding-left: 15px;
+  }
+}
+
 #spacer-div {
   height: 10em;
 }
@@ -74,77 +146,10 @@ body {
   margin-right: auto;
   margin-bottom: 4em;
 }
-// .navbar {
-//   align-items: center;
-//
-//   ul {
-//     padding-left: 5em;
-//     list-style: none;
-//     display: inline-block;
-//     list-style-type: none;
-//     color: rgba(0,0,0,0);
-//
-//     > li {
-//       font-size: $font-size-h5;
-//       position: relative;
-//       float: left;
-//       text-transform: uppercase;
-//       cursor: pointer;
-//       color: rgba(0,0,0,0);
-//       text-align: center;
-//       //border-radius             : 1em;
-//       transition-duration: 0.3s;
-//       transition-timing-function: ease-in-out;
-//       transition-property: background, color, padding, border-radius;
-//
-//       &:after {
-//         position: absolute;
-//         z-index: -1;
-//         content: "";
-//         right: 0;
-//         border-radius: 50%;
-//       }
-//
-//       &:last-child:after {
-//         box-shadow: none;
-//       }
-//
-//       &:hover {
-//         background-color: #E71B64;
-//       }
-//
-//       > a {
-//         color: #E7E0EB;
-//         text-decoration: none;
-//         font-size: 1.4em;
-//       }
-//     }
-//   }
-// }
 /* small screens */
 @media screen and (max-width: 44em) {
   body {
     margin: 1.5em 0;
-  }
-
-  nav[role="full-horizontal"] {
-    ul {
-      padding: 0 0.5em;
-    }
-
-    ul > li {
-      width: 100%;
-      padding: 0.45em 0.25em;
-      margin: 0 0 0.55em;
-
-      &:after {
-        box-shadow: none;
-      }
-    }
-  }
-  /*Top Menus for small screens*/
-  #logo {
-    position: relative;
   }
 }
 
@@ -188,33 +193,6 @@ body {
   }
 }
 //Data
-
-.fullTitle {
-  width: 100%;
-  background-color: rgba(0,0,0,0.3);
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-family: Cabin, sans-serif;
-  text-align: center;
-  vertical-align: middle;
-  color: #f9f9f9;
-}
-
-#carHeader {
-  grid-column: 2;
-  grid-row: 1;
-  color: #f9f9f9;
-  font-size: 40px;
-  padding-left: 15px;
-}
-
-#teamHeader {
-  grid-column: 2;
-  grid-row: 2;
-  color: #f9f9f9;
-  font-style: 30px;
-  padding-left: 15px;
-}
 
 .dataContainer {
   display: grid;
@@ -312,6 +290,13 @@ body {
     color: #f9f9f9;
     display: block;
     text-decoration: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .logout-button-nav {
+    padding-top: 0;
+    border-radius: 5px 0 0 5px;
+    margin: 15px 0;
   }
 }
 
